fixing line and letter spacing

--- a/style.css
+++ b/style.css
@@ -102,9 +102,11 @@ h3 {
 p {
     color: white;
     font-family: 'Raleway', sans-serif;
-    letter-spacing: 3px;
-    line-height: 1em;
-    margin-bottom: 20px;  
+    letter-spacing: 2px;
+    line-height: 1.5em;
+    margin-bottom: 20px;
+    margin-left: 20px;
+    margin-right: 20px;  
 }
 
 /* progress bar from JS fiddle */
